OCE-195 Fixed custom chart hover flickering

--- a/ui/oce/corruption-risk/style.less
+++ b/ui/oce/corruption-risk/style.less
@@ -152,6 +152,7 @@
             background: @popupColor;
             padding: 15px 5px;
             border-radius: 5px;
+            pointer-events: none;
             .title{
                 color: #70819b;
                 font-weight: bold;
